tests/specs/ecosystem/olets/css_fluid_length/1_1_1.test
olets/css-fluid-length/1.1.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'PxableLength'.
function fluidLength(fromLength: PxableLength, toLength: PxableLength, options?: Config): string {
                                 ~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:11:34

TS2304 [ERROR]: Cannot find name 'PxableLength'.
function fluidLength(fromLength: PxableLength, toLength: PxableLength, options?: Config): string {
                                                         ~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:11:58

TS2304 [ERROR]: Cannot find name 'Config'.
function fluidLength(fromLength: PxableLength, toLength: PxableLength, options?: Config): string {
                                                                                 ~~~~~~
    at file://<tmpdir>/src/index.ts:11:82

Found 3 errors.

error: Type checking failed.

